--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/NPC.yml
@@ -181,12 +181,17 @@ shops:
     - 珊瑚手炮
     极地之灵:
     - 霜牙冲击波
+    - 冰坠三叉戟
+    - 恐寒症
+    机械三王:
+    - 北极熊爪
     世纪之花:
     - 纳米机器人
     - 大狂鲨鳞
     - 大力士甲虫
     - 绝对零度
     - 恒吹雪
+    - 凛冬之怒
   军火商:
     default:
     - 木箭
@@ -240,6 +245,7 @@ shops:
     - 充能铁轨
     - 拉杆
     - 南瓜种子
+    - 大自然的恩赐
     骷髅王:
     - 地牢砖
     世纪之花:
