--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -512,6 +512,7 @@
     2:
       items:
       - 孢子囊
+      - 生命碎片:30:35
       - 小瓶毒液:8:16
       - 吉他斧:1:1:0.05
       - 矮人法杖:1:1:0.5
@@ -629,7 +630,7 @@
       - 微波辐照
       - 星辰溅散
       - 星神圣护
-      - 流星雨
+      - 天穹流星
     2:
       items:
       - 星神隐壳
