--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -185,14 +185,17 @@
         - "铜币:600:750:1"
         - "羽毛:1:1:0.5"
         - "巨型羽毛:1:1:0.02"
+        - "天空之羽:1:1:0.035"
 骷髅:
     drop:
         - "铜币:200:400:1"
         - "骨头:1:3:0.9807"
-        - "蓝月:1:1:0.0152"
-        - "钴盾:1:1:0.0152"
-        - "海蓝权杖:1:1:0.0152"
-        - "妖刀村正:1:1:0.0152"
+        - "手枪:1:1:0.01"
+        - "水矢:1:1:0.01"
+        - "蓝月:1:1:0.01"
+        - "钴盾:1:1:0.01"
+        - "海蓝权杖:1:1:0.01"
+        - "妖刀村正:1:1:0.01"
         - "裁缝巫毒娃娃:1:1:0.0033"
     buffImmute:
         - "中毒"
