--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/weapons.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/weapons.yml
@@ -734,7 +734,7 @@
   type: STAB
   size: 3.75
   attributes:
-    useTime: 30
+    useTime: 40
 剑锋之誓约:
   type: SWING
   autoSwing: true
@@ -749,7 +749,7 @@
   attributes:
     damage: 35
     armorPenetration: 40
-    useTime: 30
+    useTime: 45
   size: 7.5
 残缺环境刃[澄澈之纯净]:
   type: SWING
@@ -809,7 +809,7 @@
 环境之刃[嫌恶之永存]_RIGHT_CLICK:
   type: STAB
   attributes:
-    useTime: 30
+    useTime: 45
   size: 6.5
 环境之刃[溺死之亡姿]:
   type: SWING
@@ -829,7 +829,7 @@
 真·环境之刃[血腾之愤]_RIGHT_CLICK:
   type: STAB
   attributes:
-    useTime: 50
+    useTime: 75
   size: 7.5
 真·环境之刃[缚囚之悼]:
   type: SWING
@@ -843,7 +843,7 @@
 真·环境之刃[变幻之潮]_RIGHT_CLICK:
   type: STAB
   attributes:
-    useTime: 30
+    useTime: 45
   size: 7
 破碎方舟:
   type: SWING
@@ -990,9 +990,9 @@
   type: BOW
   autoSwing: true
   fireRounds: 4
-  fireRoundsDelay: 2
+  fireRoundsDelay: 1
   attributes:
-    useTime: 8
+    useTime: 12
     useSpeedMulti: 1
     useSpeedRangedMulti: 1
   ammoConversion:
@@ -1003,7 +1003,7 @@
   autoSwing: true
   ammo: _孢子球
   attributes:
-    useTime: 12
+    useTime: 20
 宇束弓:
   type: BOW
   autoSwing: true
@@ -1097,7 +1097,7 @@
   type: SPECIAL_AMMO
   ammo: _海之烧灼水弹
   attributes:
-    useTime: 30
+    useTime: 45
   autoSwing: true
 物质调谐器:
   type: SPECIAL_AMMO
@@ -1132,7 +1132,7 @@
   ammo: 凝胶
   autoSwing: true
   fireRounds: 5
-  fireRoundsDelay: 2
+  fireRoundsDelay: 1
   ammoConversion:
     凝胶:
     - 火焰
@@ -1140,7 +1140,7 @@
   type: SPECIAL_AMMO
   ammo: 凝胶
   fireRounds: 3
-  fireRoundsDelay: 3
+  fireRoundsDelay: 2
   autoSwing: true
   attributes:
     projectileSpeed: 35
@@ -1182,7 +1182,7 @@
   type: SPECIAL_AMMO
   ammo: 凝胶
   fireRounds: 3
-  fireRoundsDelay: 3
+  fireRoundsDelay: 2
   autoSwing: true
   attributes:
     projectileSpeed: 35
@@ -1193,7 +1193,7 @@
   type: SPECIAL_AMMO
   ammo: 凝胶
   fireRounds: 3
-  fireRoundsDelay: 3
+  fireRoundsDelay: 2
   autoSwing: true
   attributes:
     projectileSpeed: 35
@@ -1224,7 +1224,7 @@
   type: SPECIAL_AMMO
   ammo: 凝胶
   fireRounds: 3
-  fireRoundsDelay: 3
+  fireRoundsDelay: 2
   autoSwing: true
   attributes:
     projectileSpeed: 35
@@ -1234,7 +1234,9 @@
 燧发枪:
   type: GUN
   thruWall: true
-左轮手枪:
+手枪:
+  type: GUN
+凤凰爆破枪:
   type: GUN
 迷你鲨:
   type: GUN
@@ -1244,7 +1246,7 @@
   type: GUN
   autoSwing: true
   fireRounds: 3
-  fireRoundsDelay: 2
+  fireRoundsDelay: 1
   offSet: 26
 巨兽鲨:
   type: GUN
@@ -1281,15 +1283,11 @@
   type: GUN
   shots: 4
   offSet: 14
-手枪:
-  type: GUN
-凤凰爆破枪:
-  type: GUN
 鹅卵石冲击波:
   type: GUN
   autoSwing: true
   fireRounds: 4
-  fireRoundsDelay: 2
+  fireRoundsDelay: 1
   ammoConversion:
     ALL:
     - 鹅卵石冲击波
@@ -1368,7 +1366,7 @@
   type: GUN
   autoSwing: true
   fireRounds: 4
-  fireRoundsDelay: 2
+  fireRoundsDelay: 1
   attributes:
     damage: 66
     useTime: 12
@@ -1386,7 +1384,7 @@
   type: GUN
   autoSwing: true
   fireRounds: 4
-  fireRoundsDelay: 2
+  fireRoundsDelay: 1
   ammoConversion:
     ALL:
     - 鹅卵石冲击波
@@ -1433,7 +1431,7 @@ P90:
   offSet: 9
   autoSwing: true
   attributes:
-    useTime: 30
+    useTime: 40
 灭域者:
   type: GUN
   shots: 3
@@ -1703,10 +1701,6 @@ P90:
 火花魔棒:
   type: MAGIC_PROJECTILE
   projectileName: 小火花
-钨钢法杖:
-  type: MAGIC_PROJECTILE
-  projectileName: 钨钢光球
-  autoSwing: true
 钻石法杖:
   type: MAGIC_PROJECTILE
   projectileName: 钻石射线
@@ -1743,8 +1737,10 @@ P90:
   autoSwing: true
   offSet: 16
 裂天剑:
-  type: MAGIC_SPECIAL
+  type: MAGIC_PROJECTILE
   projectileName: 裂天剑
+  fireRounds: 3
+  fireRoundsDelay: 2
   autoSwing: true
 爆裂藤蔓:
   type: MAGIC_SPECIAL
@@ -1818,8 +1814,87 @@ P90:
 终极棱镜:
   type: MAGIC_SPECIAL
   autoSwing: true
+钨钢法杖:
+  type: MAGIC_PROJECTILE
+  projectileName: 钨钢光球
+  autoSwing: true
+冰坠法杖:
+  type: MAGIC_PROJECTILE
+  projectileName: 冰锥
+  shots: 2
+  autoSwing: true
+魔法玫瑰:
+  type: MAGIC_PROJECTILE
+  projectileName: 魔法花朵
+  autoSwing: true
+水流喷射:
+  type: MAGIC_PROJECTILE
+  projectileName: 海蓝射线
+  autoSwing: true
+海水杖:
+  type: MAGIC_PROJECTILE
+  projectileName: 海耀弹
+  shots: 2
+  offSet: 12
+  autoSwing: true
+天空之羽:
+  type: MAGIC_PROJECTILE
+  projectileName: 天蓝羽毛
+  shots: 2
+  autoSwing: true
+丰收:
+  type: MAGIC_PROJECTILE
+  projectileName: 南瓜
+  autoSwing: true
+菌杖:
+  type: MAGIC_PROJECTILE
+  projectileName: 孢子
+  shots: 3
+  autoSwing: true
+狱火蝙蝠杖:
+  type: MAGIC_PROJECTILE
+  projectileName: 黑翼蝙蝠
+  shots: 3
+  offSet: 10
+  autoSwing: true
+腐蚀之雨法杖:
+  type: MAGIC_PROJECTILE
+  projectileName: 腐蚀雨云
 永夜射线:
   type: MAGIC_SPECIAL
+  autoSwing: true
+冰晶风暴:
+  type: MAGIC_PROJECTILE
+  projectileName: 冰晶雪花
+  autoSwing: true
+冰坠三叉戟:
+  type: MAGIC_PROJECTILE
+  projectileName: 三叉戟冰锥
+  shots: 3
+  offSet: 15
+  autoSwing: true
+飞龙之歌:
+  type: MAGIC_PROJECTILE
+  projectileName: 迷你飞龙
+  shots: 2
+  autoSwing: true
+烁兰:
+  type: MAGIC_PROJECTILE
+  projectileName: 闪光花朵
+  autoSwing: true
+狱炎裂空:
+  type: MAGIC_PROJECTILE
+  projectileName: 狱炎三叉戟
+  fireRounds: 15
+  fireRoundsDelay: 1
+  autoSwing: true
+水灌:
+  type: MAGIC_PROJECTILE
+  projectileName: 海蓝射线
+  autoSwing: true
+硫火玫瑰:
+  type: MAGIC_PROJECTILE
+  projectileName: 硫火射线
   autoSwing: true
 女武神权杖:
   type: MAGIC_SPECIAL
@@ -1827,8 +1902,179 @@ P90:
 泰拉射线:
   type: MAGIC_SPECIAL
   autoSwing: true
+亚特兰蒂斯:
+  type: MAGIC_SPECIAL
+  autoSwing: true
+南极光羽:
+  type: MAGIC_PROJECTILE
+  projectileName: 极光光束
+  autoSwing: true
+维苏威阿斯:
+  type: MAGIC_PROJECTILE
+  projectileName: 熔岩陨星
+  shots: 3
+  autoSwing: true
+维苏威阿斯_RIGHT_CLICK:
+  type: MAGIC_PROJECTILE
+  projectileName: 熔岩陨星
+  shots: 3
+  offSet: 30
+  autoSwing: true
+瘟疫法杖:
+  type: MAGIC_PROJECTILE
+  projectileName: 瘟疫毒牙
+  shots: 3
+  offSet: 17.5
+  autoSwing: true
+血涌:
+  type: MAGIC_PROJECTILE
+  projectileName: 血液
+  shots: 15
+  autoSwing: true
+玄法百枝莲:
+  type: MAGIC_PROJECTILE
+  projectileName: 玄法花朵
+  autoSwing: true
+幻星法杖:
+  type: MAGIC_PROJECTILE
+  projectileName: 幻星水晶
+  autoSwing: true
 元素射线:
   type: MAGIC_SPECIAL
+  autoSwing: true
+麦格纳炮:
+  type: MAGIC_PROJECTILE
+  projectileName: 麦格纳冲击波
+  autoSwing: true
+脉冲手枪:
+  type: MAGIC_PROJECTILE
+  projectileName: 粉色脉冲
+  autoSwing: true
+恐寒症:
+  type: MAGIC_PROJECTILE
+  projectileName: 冰锥
+  shots: 6
+  offSet: 10
+  autoSwing: true
+离子冲击波:
+  type: MAGIC_PROJECTILE
+  projectileName: 离子光波
+  autoSwing: true
+高斯手枪:
+  type: MAGIC_PROJECTILE
+  projectileName: 绿色螺旋弹
+  autoSwing: true
+激光加特林:
+  type: MAGIC_PROJECTILE
+  projectileName: 激光
+  offSet: 5
+  autoSwing: true
+拉扎尔射线:
+  type: MAGIC_SPECIAL
+  autoSwing: true
+冰矢:
+  type: MAGIC_PROJECTILE
+  projectileName: 冰矢
+  autoSwing: true
+珊瑚泥:
+  type: MAGIC_PROJECTILE
+  projectileName: 珊瑚块
+  autoSwing: true
+清道夫:
+  type: MAGIC_PROJECTILE
+  projectileName: 能量弹
+  autoSwing: true
+火矢:
+  type: MAGIC_PROJECTILE
+  projectileName: 火矢
+  autoSwing: true
+信风:
+  type: MAGIC_PROJECTILE
+  projectileName: 天蓝羽毛
+  autoSwing: true
+深渊之书:
+  type: MAGIC_PROJECTILE
+  projectileName: 黑檀球
+  autoSwing: true
+诡触之书:
+  type: MAGIC_SPECIAL
+  autoSwing: true
+冰火矢:
+  type: MAGIC_PROJECTILE
+  projectileName: 冰火矢
+  autoSwing: true
+波塞冬:
+  type: MAGIC_PROJECTILE
+  projectileName: 海神之台风
+  autoSwing: true
+死亡之尘:
+  type: MAGIC_PROJECTILE
+  projectileName: 死亡粉尘
+  autoSwing: true
+遗迹圣物:
+  type: MAGIC_PROJECTILE
+  projectileName: 遗忘沙刃
+  shots: 12
+  autoSwing: true
+暗晶风暴:
+  type: MAGIC_PROJECTILE
+  projectileName: 暗晶碎片
+  offSet: 17.5
+  autoSwing: true
+沸腾之火:
+  type: MAGIC_PROJECTILE
+  projectileName: 深渊亡魂
+  shots: 3
+  offSet: 12.5
+  autoSwing: true
+蒸海硫火:
+  type: MAGIC_PROJECTILE
+  projectileName: 硫磺火球
+  autoSwing: true
+混乱火鞭:
+  type: MAGIC_PROJECTILE
+  projectileName: 混乱火球
+  autoSwing: true
+常青之气:
+  type: MAGIC_PROJECTILE
+  projectileName: 咒焰流
+  autoSwing: true
+天堂之泪:
+  type: MAGIC_PROJECTILE
+  projectileName: 天堂之泪
+  shots: 2
+  offSet: 15
+  autoSwing: true
+始源之尘:
+  type: MAGIC_PROJECTILE
+  projectileName: 始源粉尘
+  autoSwing: true
+凛冬之怒:
+  type: MAGIC_PROJECTILE
+  projectileName: 暴雪
+  shots: 2
+  offSet: 8
+  autoSwing: true
+禁忌之阳:
+  type: MAGIC_PROJECTILE
+  projectileName: 禁忌烈阳
+  autoSwing: true
+命运之手:
+  type: MAGIC_SPECIAL
+  autoSwing: true
+天穹流星:
+  type: MAGIC_PROJECTILE
+  projectileName: 彗星
+  shots: 3
+  autoSwing: true
+北极熊爪:
+  type: MAGIC_PROJECTILE
+  projectileName: 冰爪
+  autoSwing: true
+阿娜希塔琶音:
+  type: MAGIC_PROJECTILE
+  projectileName: 高音谱号
+  offSet: 10
   autoSwing: true
 蜘蛛女王法杖:
   type: SENTRY
